--- a/app/assets/stylesheets/drillbit/post_form.scss
+++ b/app/assets/stylesheets/drillbit/post_form.scss
@@ -37,9 +37,12 @@
 	
 }
 
-#banner-content {
-	width:500px;
-	height:100px;
+#banner-content{
+	text-align: center;
+	
+	img {
+		width:400px;
+	}
 }
 
 .imgWrap {
